--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/variables";
 @import "./utils/mixins";
 @import "./utils/maps";
+@import "./utils/fonctions";
 
 @import "./base/base";
 
