--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -20,7 +20,7 @@
     top: 44px;
     right: 5%;
     font-size: 2.25em;
-    color: $clr-primaire;
+    color: $clr-pri;
     @include tab-max {
       font-size: 1.8em;
     }
