--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
-$clr-primaire: #901C1C;
-$clr-secondaire: #D3573C;
-$clr-tertiaire: #DB8876;
-$clr-quaternaire: #FAFAFA;
+// Couleurs
+$clr-pri: #901C1C;
+$clr-sec: #D3573C;
+$clr-ter: #DB8876;
+$clr-qua: #FAFAFA;
