--- a/sass/layouts/_modale-carous.scss
+++ b/sass/layouts/_modale-carous.scss
@@ -11,22 +11,22 @@
   justify-content: center;
   align-items: center;
   &__liste {
-    width: 70%;
+    max-width: 70%;
     // max-height: 984px;
     // max-width: 1253px;
     li {
-      display: block;
       position: relative;
-      color: $clr-primaire;
+      color: $clr-pri;
     }
     img {
       width: 100%;
+      max-height: 80vh;
       object-fit: contain;
       border-radius: 5px;
     }
     figcaption {
       font-size: 1.5em;   
-      @include tab-max {
+      @include mob-max {
         font-size: 0.875em;
       }
     }
