--- a/css/style.css
+++ b/css/style.css
@@ -321,13 +321,17 @@ ul {
   object-fit: cover;
   width: 200px;
   height: 200px;
+  flex-shrink: 0;
+}
+.img-fiche--pho {
+  margin-left: 210px;
 }
 @media all and (max-width: 1024px) {
   .img-fiche--pho {
-    position: absolute;
     right: 5%;
     width: 125px;
     height: 125px;
+    margin-left: 10px;
   }
 }
 @media all and (max-width: 599px) {
@@ -414,17 +418,17 @@ ul {
   color: #D3573C;
   text-align: center;
 }
-.fiche-acc__lieu {
+.fiche-acc p:nth-of-type(1) {
   font-size: 0.813em;
   text-align: center;
   color: #901C1C;
 }
-.fiche-acc__citation {
+.fiche-acc p:nth-of-type(2) {
   font-size: 0.813em;
   text-align: center;
   margin-top: 3px;
 }
-.fiche-acc__prix {
+.fiche-acc p:nth-of-type(3) {
   font-size: 0.563em;
   text-align: center;
   color: #757575;
@@ -761,6 +765,7 @@ ul {
   color: black;
   padding: 21px 31px;
   border-radius: 5px 5px 0 0;
+  font-weight: 500;
 }
 @media all and (max-width: 1024px) {
   .infosup {
@@ -774,6 +779,9 @@ ul {
   }
 }
 .infosup p {
+  font-weight: 500;
+}
+.infosup__prix {
   font-weight: 500;
 }
 
