--- a/sass/components/_fiches.scss
+++ b/sass/components/_fiches.scss
@@ -18,17 +18,17 @@
       text-align: center;
     }
   }
-  &__lieu {
+  p:nth-of-type(1) {
     font-size: 0.813em;
     text-align: center;
     color: $clr-pri;
   }
-  &__citation {
+  p:nth-of-type(2) {
     font-size: 0.813em;
     text-align: center;
     margin-top: 3px;
   }
-  &__prix {
+  p:nth-of-type(3) {
     font-size: 0.563em;
     text-align: center;
     color: #757575;
