--- a/sass/layouts/_modale-carous.scss
+++ b/sass/layouts/_modale-carous.scss
@@ -18,7 +18,7 @@
       position: relative;
       color: $clr-pri;
     }
-    img {
+    img, video {
       width: 100%;
       max-height: 80vh;
       object-fit: contain;
