--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -23,7 +23,7 @@
 }
 
 // Photos et vidéos de la galerie
-.galerie-fig {
+.fig-img, .fig-vid {
   margin-top: 30px;
   width: 32%;
   max-width: 350px;
@@ -36,7 +36,10 @@
     width: 100%;
     max-width: 100%;
   }
-  img {
+  a {
+    display: block;
+  }
+  img, video {
     width: 100%;
     height: 300px;
     object-fit: cover;
@@ -45,23 +48,24 @@
       height: 190px;
     }
   }
-  &__descr {
+  figcaption {
     display: flex;
     justify-content: space-between;
     color: $clr-pri;
     margin-top: 3px;
-    h2 {
-      font-size: 1.5em;
-      @include tab-max {
-        font-size: 0.875em;
-      }
+  }
+  h2 {
+    max-width: 270px;
+    font-size: 1.5em;
+    @include tab-max {
+      font-size: 0.875em;
     }
-    p {
-      font-size: 1.5em;
-      font-weight: 500;
-      @include tab-max {
-        font-size: 0.875em;
-      }
+  }
+  p {
+    font-size: 1.5em;
+    font-weight: 500;
+    @include tab-max {
+      font-size: 0.875em;
     }
   }
 }
