--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ ul {
   }
 }
 
-.btn-ferme--carous {
+.btn-ferme--carrou {
   position: absolute;
   right: -80px;
   top: 0;
@@ -156,7 +156,7 @@ ul {
   border: none;
   background-color: rgba(255, 255, 255, 0);
 }
-.btn-ferme--carous::before {
+.btn-ferme--carrou::before {
   content: "";
   display: block;
   position: absolute;
@@ -167,7 +167,7 @@ ul {
   transform: rotate(-45deg);
   background-color: #901C1C;
 }
-.btn-ferme--carous::after {
+.btn-ferme--carrou::after {
   content: "";
   display: block;
   position: absolute;
@@ -178,11 +178,11 @@ ul {
   transform: rotate(45deg);
   background-color: #901C1C;
 }
-.btn-ferme--carous:hover::before, .btn-ferme--carous:hover::after {
+.btn-ferme--carrou:hover::before, .btn-ferme--carrou:hover::after {
   background-color: #DB8876;
 }
 @media all and (max-width: 599px) {
-  .btn-ferme--carous {
+  .btn-ferme--carrou {
     position: absolute;
     right: -50px;
     top: 10px;
@@ -191,7 +191,7 @@ ul {
     border: none;
     background-color: rgba(255, 255, 255, 0);
   }
-  .btn-ferme--carous::before {
+  .btn-ferme--carrou::before {
     content: "";
     display: block;
     position: absolute;
@@ -203,7 +203,7 @@ ul {
     background-color: #901C1C;
     background-color: #901C1C;
   }
-  .btn-ferme--carous::after {
+  .btn-ferme--carrou::after {
     content: "";
     display: block;
     position: absolute;
@@ -215,12 +215,13 @@ ul {
     background-color: #901C1C;
     background-color: #901C1C;
   }
-  .btn-ferme--carous:hover::before, .btn-ferme--carous:hover::after {
+  .btn-ferme--carrou:hover::before, .btn-ferme--carrou:hover::after {
     background-color: #DB8876;
   }
 }
 
 .menu-liste {
+  display: none;
   position: absolute;
   top: -10px;
   left: 96px;
