--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 
 @import "./layouts/bloc-page";
 @import "./layouts/header";
-@import "./layouts/modale-carous";
+@import "./layouts/modale-carrousel";
 @import "./layouts/modale-form";
 
 @import "./pages/accueil";
