--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -53,7 +53,7 @@
     @include btn-ferme--mini(white, 20px, 30px);
   }
 }
-.btn-ferme--carous {
+.btn-ferme--carrou {
   @include btn-ferme($clr-pri, 0, -80px);
   @include mob-max {
     @include btn-ferme--mini($clr-pri, 10px, -50px);
@@ -62,6 +62,7 @@
 
 // Menu déroulant (page photographe)
 .menu-liste {
+  display: none;
   position: absolute;
   top: -10px;
   left: 96px;
