--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ ul {
   font-size: 1.125em;
   text-align: left;
   padding-left: 20px;
+  cursor: pointer;
 }
 @media all and (max-width: 1024px) {
   .btn--galerie {
@@ -82,6 +83,7 @@ ul {
   height: 72px;
   border: none;
   background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
 }
 .btn-ferme--form::before {
   content: "";
@@ -155,6 +157,7 @@ ul {
   height: 72px;
   border: none;
   background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
 }
 .btn-ferme--carrou::before {
   content: "";
@@ -246,6 +249,7 @@ ul {
   padding-left: 10px;
   line-height: 50px;
   font-weight: 700;
+  cursor: pointer;
 }
 @media all and (max-width: 1024px) {
   .menu-liste li {
@@ -264,6 +268,7 @@ ul {
   height: 96px;
   border: none;
   background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
 }
 .btn-chvr--gau {
   left: -96px;
@@ -293,6 +298,7 @@ ul {
     height: 48px;
     border: none;
     background-color: rgba(255, 255, 255, 0);
+    cursor: pointer;
   }
   .btn-chvr--gau {
     left: -48px;
@@ -362,6 +368,7 @@ ul {
 }
 .fig-img a, .fig-vid a {
   display: block;
+  cursor: pointer;
 }
 .fig-img img, .fig-img video, .fig-vid img, .fig-vid video {
   width: 100%;
@@ -382,7 +389,7 @@ ul {
 }
 .fig-img h2, .fig-vid h2 {
   max-width: 270px;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 @media all and (max-width: 1024px) {
   .fig-img h2, .fig-vid h2 {
@@ -390,13 +397,16 @@ ul {
   }
 }
 .fig-img p, .fig-vid p {
-  font-size: 1.5em;
-  font-weight: 500;
+  font-size: 1em;
+  cursor: pointer;
 }
 @media all and (max-width: 1024px) {
   .fig-img p, .fig-vid p {
     font-size: 0.875em;
   }
+}
+.fig-img span, .fig-vid span {
+  font-weight: 500;
 }
 
 .fiche-acc {
@@ -453,6 +463,7 @@ ul {
   border-radius: 11px;
   padding: 1px 6px 1px 3px;
   margin: 0 2px;
+  cursor: pointer;
 }
 .fiche-acc__liste a:hover, .fiche-acc__liste a:focus {
   background-color: #901C1C;
@@ -590,26 +601,41 @@ ul {
   justify-content: center;
   align-items: center;
 }
-.modale-carrous__liste {
+.modale-carrous__cont {
   max-width: 70%;
-}
-.modale-carrous__liste li {
   position: relative;
   color: #901C1C;
 }
-.modale-carrous__liste img, .modale-carrous__liste video {
+.modale-carrous__cont img, .modale-carrous__cont video {
   width: 100%;
   max-height: 80vh;
   object-fit: contain;
   border-radius: 5px;
 }
-.modale-carrous__liste figcaption {
-  font-size: 1.5em;
+.modale-carrous__descr {
+  display: flex;
+  justify-content: space-between;
+}
+.modale-carrous__descr h2 {
+  font-size: 1em;
+  max-width: 75%;
 }
 @media all and (max-width: 599px) {
-  .modale-carrous__liste figcaption {
+  .modale-carrous__descr h2 {
     font-size: 0.875em;
   }
+}
+.modale-carrous__descr p {
+  cursor: pointer;
+  font-size: 1em;
+}
+@media all and (max-width: 599px) {
+  .modale-carrous__descr p {
+    font-size: 0.875em;
+  }
+}
+.modale-carrous__descr span {
+  font-weight: 500;
 }
 
 .modale-contact {
