--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -37,6 +37,7 @@
     font-size: 1.125em;
     text-align: left;
     padding-left: 20px;
+    cursor: pointer;
     @include tab-max {
       top: -5px;
       width: 145px;
@@ -84,6 +85,7 @@
     padding-left: 10px;
     line-height: 50px;
     font-weight: 700;
+    cursor: pointer;
     @include tab-max {
       line-height: 35px
     }
