--- a/sass/layouts/_modale-carrousel.scss
+++ b/sass/layouts/_modale-carrousel.scss
@@ -10,25 +10,36 @@
   background-color: white;
   justify-content: center;
   align-items: center;
-  &__liste {
+  &__cont {
     max-width: 70%;
-    // max-height: 984px;
-    // max-width: 1253px;
-    li {
-      position: relative;
-      color: $clr-pri;
-    }
+    position: relative;
+    color: $clr-pri;
     img, video {
       width: 100%;
       max-height: 80vh;
       object-fit: contain;
       border-radius: 5px;
-    }
-    figcaption {
-      font-size: 1.5em;   
+    }  
+  }
+  &__descr {
+    display: flex;
+    justify-content: space-between;
+    h2 {
+      font-size: 1em;
+      max-width: 75%;
       @include mob-max {
         font-size: 0.875em;
-      }
+      } 
+    }
+    p {
+      cursor: pointer;
+      font-size: 1em;
+      @include mob-max {
+        font-size: 0.875em;
+      }    
+    }
+    span {
+      font-weight: 500;
     }
   }
 }
