--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -62,6 +62,7 @@
   height: 72px;
   border: none;
   background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
   &::before {
     @include btn-barre($clr, -45deg, 54px, 6px);
   }
@@ -103,6 +104,7 @@
   height: $taille;
   border: none;
   background-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
   &--gau {
     left: -$taille;
     &:hover #chvr-gau {
