--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -7,6 +7,8 @@
   border-radius: 5px;
   border: none;
   font-size: 1.125em;
+  font-size: 18px;
+
   font-weight: 700;
   color: white;
   @include tab-max {
@@ -32,15 +34,25 @@
   // Bouton de sélection du menu déroulant
   &--galerie { 
     position: absolute;
-    top: -10px;
+    top: -14px;
     left: 96px;
-    font-size: 1.125em;
+    padding: 0 20px 0 20px;
     text-align: left;
-    padding-left: 20px;
     cursor: pointer;
+    span {
+      font-weight: 700;
+      font-size: 18px;
+    }
+    .fa-chevron-down {
+      position: absolute;
+      right: 18px;
+      line-height: 69px;
+      @include tab-max {
+        line-height: 35px
+      }
+    }
     @include tab-max {
       top: -5px;
-      width: 145px;
       height: 35px;
       font-size: 1.125em;
     }
@@ -65,7 +77,7 @@
 .menu-liste {
   display: none;
   position: absolute;
-  top: -10px;
+  top: -14px;
   left: 96px;
   width: 170px;
   height: 170px;
@@ -76,23 +88,34 @@
   padding: 10px;
   @include tab-max {
     top: -5px;
-    width: 145px;
     height: 110px;
     padding: 0 10px;
   } 
   li {
-    font-size: 1.125em;
-    padding-left: 10px;
+    padding: 0 10px 0 10px;
     line-height: 50px;
     font-weight: 700;
     cursor: pointer;
+    &:hover, &:focus {
+     font-size: 1.125em;
+    }
     @include tab-max {
       line-height: 35px
     }
+    &:nth-of-type(2) {
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+    }
   }
-  :nth-child(2) {
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+  .fa-chevron-up {
+    position: absolute;
+    top: 0;
+    right: 18px;
+    line-height: 69px;
+    pointer-events: none;
+    @include tab-max {
+      line-height: 35px
+    }
   }
 }
 
