--- a/sass/layouts/_form.scss
+++ b/sass/layouts/_form.scss
@@ -41,18 +41,29 @@
       border: none;
       border-radius: 5px;
       margin-bottom: 3px;
+      padding: 5px;
+      font-size: 1.5em;
+      &:focus {
+        outline: 4px solid $clr-pri;
+      }
       @include tab-max {
         line-height: 52px;
         margin: 5px 0 10px 0;
-      }
+      }   
     }
     textarea {
       width: 100%;
       height: 170px;
       border: none;
+      border-radius: 5px;
       margin: 5px 0 26px 0;
+      padding: 5px;
+      font-size: 1.5em;
+      &:focus {
+        outline: 4px solid $clr-pri;
+      }
     }
-    .invis {
+    .lecteur {
       position: absolute;
       top: 10000px;
     }
